<resources>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_skip">Skip</string>
    <string name="label_socialize_at_a_distance">Socialize at a distance</string>
    <string name="label_socialize_subtitle">Find people near you, start a conversation and connect as a community, all within your virtual space.</string>
    <string name="label_virtual_customer_interaction">Virtual customer interactions</string>
    <string name="label_customer_interaction_subtitle">Engage with your customers, answer queries and promote your business in the virtual space.</string>
    <string name="label_your_phone_no">What is your phone number?</string>
    <string name="label_get_started">Tap \"Get Started\" to get an SMS confirmation to help you use chat. We would like your phone number.</string>
    <string name="label_country_code">COUNTRY CODE</string>
    <string name="label_phone_no">Phone number</string>
    <string name="action_continue">Continue</string>
    <string name="are_you_a_user_login">Are you a User? Login</string>
    <string name="are_you_a_business_sign_up">Are you a Business? Sign Up</string>
    <string name="are_you_a_business">Are you a Business? </string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_verify_phone_no">Verify phone number</string>
    <string name="label_check_sms_msg">Check your SMS messages. We\'ve sent you the PIN at</string>
    <string name="action_verify">Verify</string>
    <string name="label_didn_t_receive_sms">Didn\'t receive SMS?</string>
    <string name="label_resend_code">Resend Code</string>
    <string name="label_profile_setup">Profile Setup</string>
    <string name="label_first_name">FIRST NAME</string>
    <string name="label_last_name">LAST NAME</string>
    <string name="label_email">EMAIL</string>
    <string name="label_keywords">KEYWORDS</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="permission_denied">Permission Denied</string> `
    <string name="label_closest_to_you">Closest to you</string>
    <string name="label_near_by_stores">Near By Stores</string>
    <string name="label_my_space">My Space</string>
    <string name="label_category">Category</string>
    <string name="label_search">Search</string>
    <string name="label_store">Near by Stores</string>
    <string name="label_notification">Notification</string>
    <string name="label_phone_no_empty">Phone number cannot be empty</string>
    <string name="label_invalid_no">Invalid phone number</string>
    <string name="label_no_verification_id">No verification id available</string>
    <string name="label_broadcast_your_ideas">Broadcast your ideas</string>
    <string name="label_location_announcement">Make location-based announcements and say what\'s\ on your mind using local tweets.</string>
    <string name="label_name">NAME</string>
    <string name="are_you_a_user">Are you a User? </string>
    <string name="label_login">Login</string>
    <string name="label_your_business_phone_no">What is your business phone number?</string>
    <string name="label_see_more">See More</string>

    <string name="username_required">Username required</string>
    <string name="email_address_required">Email address required</string>
    <string name="valid_email_required">Valid email address required</string>
    <string name="label_more_keywords">Cannot add more than five keywords</string>
    <string name="label_location">LOCATION</string>
    <string name="label_space_phone">PHONE</string>
    <string name="label_open_hours">OPENING HOURS</string>
    <string name="label_description">DESCRIPTION</string>
    <string name="space_required">Space name required</string>
    <string name="label_description_message">Description required</string>
    <string name="label_open_hours_test">Open hours required</string>
    <string name="label_close_hours_test">Closing hours required</string>
    <string name="add_space">Add Space</string>
    <string name="label_my_friends">My Friends</string>
    <string name="closed">Closed</string>
    <string name="label_phone_no_ad">PHONE NUMBER</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="cancel">Cancel</string>
    <string name="label_profile">Profile Settings</string>
    <string name="label_phone">PHONE</string>
    <string name="search_hint_">Search by Name, Keyword, Phone</string>

</resources>
