<!--
  ~ /**
  ~  * Created by Nethaji on 27/6/20 8:11 PM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 27/6/20 8:11 PM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/spacing_normal"
    android:layout_marginEnd="@dimen/spacing_normal"
    android:layout_marginBottom="@dimen/spacing_normal"
    tools:context="com.mespace.ui.view.storephone.StorePhoneNoFragment">

    <ProgressBar
        android:id="@+id/pbPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"
        android:paddingEnd="@dimen/spacing_normal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhoneNo"
        style="@style/TitleTextView"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:text="@string/label_your_phone_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibBack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubtitle"
        style="@style/TextViewSubTitle"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:text="@string/label_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCountryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:paddingEnd="@dimen/spacing_medium"
        android:text="@string/label_country_code"
        android:textColor="@color/country_code"
        android:textSize="@dimen/size_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/spacing_normal"
        android:src="@drawable/ic_keyboard_arrow_down"
        app:layout_constraintBottom_toBottomOf="@id/ccpEt"
        app:layout_constraintEnd_toEndOf="@id/ccpEt"
        app:layout_constraintTop_toTopOf="@id/ccpEt" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccpEt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/country_code_underline"
        android:gravity="bottom"
        android:paddingBottom="@dimen/spacing_tiny"
        app:ccp_arrowColor="@color/black"
        app:ccp_contentColor="@color/country_code"
        app:ccp_defaultNameCode="91"

        app:ccp_showFlag="false"
        app:ccp_showFullName="false"
        app:ccp_showNameCode="false"
        app:layout_constraintBottom_toBottomOf="@id/tilCountryCode"
        app:layout_constraintEnd_toEndOf="@id/tvCountryCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tilCountryCode" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCountryCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/tvCountryCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCountryCode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieCountryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:drawableRight="@drawable/ic_arrow_down"
            android:inputType="number"
            android:longClickable="false"
            android:text="+91" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhoneNo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginLeft="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_tiny"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@id/tilCountryCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tilCountryCode"
        app:layout_constraintTop_toBottomOf="@id/tvCountryCode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/label_phone_no"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:longClickable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        style="@style/ConnectionButton"
        android:background="@color/blue"
        android:backgroundTint="@color/blue"
        android:text="@string/action_continue"
        app:cornerRadius="@dimen/spacing_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPhoneNo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignInOrUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/are_you_a_business_sign_up"
        android:textColor="@color/subtitle_color"
        android:textSize="@dimen/size_15"
        android:padding="@dimen/spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnContinue" />

</androidx.constraintlayout.widget.ConstraintLayout>
