<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.mespace.ui.view.profile.ProfileSetupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_normal">

        <ProgressBar
            android:id="@+id/pbProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            android:paddingEnd="@dimen/spacing_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProfileSetup"
            style="@style/TitleTextView"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:text="@string/label_profile_setup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibBack" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProfile"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@color/transparent"
            android:src="@drawable/profile_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProfileSetup" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivEditDp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:padding="@dimen/spacing_normal"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
            app:layout_constraintEnd_toEndOf="@id/ivProfile"
            app:layout_constraintStart_toStartOf="@id/ivProfile"
            app:layout_constraintTop_toTopOf="@+id/ivProfile"
            app:srcCompat="@drawable/ic_camera" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ivProfile">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingEnd="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_small"
                android:src="@drawable/ic_icon_name"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_name"
                    android:textSize="@dimen/size_12" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/llName">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingEnd="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_small"
                android:src="@drawable/ic_icon_mail"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"
                    android:textSize="@dimen/size_12" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llKeywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/llEmail">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingEnd="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_small"
                android:src="@drawable/ic_icon_mail"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_keywords"
                    android:textSize="@dimen/size_12" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cgTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etKeywords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            style="@style/ConnectionButton"
            android:background="@color/blue"
            android:backgroundTint="@color/blue"
            android:text="@string/action_update_profile"
            app:cornerRadius="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llKeywords" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
